objects/CSS_Integration_Error__c.object
<CustomObject>
    <fields>
        <fullName>Auth_Call_Time__c</fullName>
        <label>Auth Call Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <description>Stores the type of Error for different integrations based on different Error type.</description>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <description>This field stores the type of error message</description>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_Data__c</fullName>
        <description>Captures the Data that the integration Program is processing.</description>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Call_Time__c</fullName>
        <label>Service Call Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Job_Number__c</fullName>
        <label>Service Job Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Stores the source name of field.</description>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWID__c</fullName>
        <formula>CreatedBy.FederationIdentifier</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WWID</label>
        <type>Text</type>
    </fields>
    <label>CSS Integration Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Job_Number__c</columns>
        <columns>Source__c</columns>
        <columns>Processed_Data__c</columns>
        <columns>Response_Body__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Service_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>WWID__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>ODM Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EDS_Errors</fullName>
        <columns>NAME</columns>
        <columns>Error_Description__c</columns>
        <columns>Processed_Data__c</columns>
        <columns>Source__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>EDS</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <label>EDS Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PC_Integration_Errors</fullName>
        <columns>Source__c</columns>
        <columns>NAME</columns>
        <columns>Error_Type__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Processed_Data__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>IDENTITY</value>
        </filters>
        <label>PC Integration Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TODAY_CD</fullName>
        <columns>NAME</columns>
        <columns>Error_Description__c</columns>
        <columns>Source__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>startsWith</operation>
            <value>connected</value>
        </filters>
        <label>TODAY CD</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Triage</fullName>
        <columns>NAME</columns>
        <columns>Error_Description__c</columns>
        <columns>Source__c</columns>
        <columns>Error_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/1/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Assess</value>
        </filters>
        <label>Triage</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Trigger</fullName>
        <columns>NAME</columns>
        <columns>Error_Description__c</columns>
        <columns>Source__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>contains</operation>
            <value>EDS</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Trigger</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>today_odm</fullName>
        <columns>NAME</columns>
        <columns>Error_Description__c</columns>
        <columns>Source__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>3/28/2019 12:00 AM</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>ODM</value>
        </filters>
        <label>Today ODM</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admin_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>yesterday_Siebel123</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Error_Description__c</columns>
        <columns>Source__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>1/2/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>QSOL</value>
        </filters>
        <label>Siebel Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ERR-{0000000}</displayFormat>
        <label>Integration Errors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSS Integration Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>